@@ -866,6 +866,8 @@ void buildSpellArray()
 
   discArray[SPELL_CALL_LIGHTNING_DEIKHAN] = new spellInfo(SPELL_DEIKHAN, DISC_DEIKHAN_WRATH, DISC_DEIKHAN_WRATH, "call lightning", TASK_DIFFICULT, LAG_2, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_350, TAR_CHAR_ROOM | TAR_VIOLENT | TAR_FIGHT_VICT | TAR_SELF_NONO , SYMBOL_STRESS_50, "", "", "", "", START_76, LEARN_4, START_DO_20, LEARN_DO_2, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_PRAYERS, 0.06, COMP_GESTURAL | COMP_VERBAL, 0);
 
+  discArray[SPELL_MARTIAL_MIGHT] = new spellInfo(SPELL_DEIKHAN, DISC_DEIKHAN_WRATH, DISC_DEIKHAN_WRATH, "martial might", TASK_EASY, LAG_3, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_150, TAR_SELF_ONLY | TAR_FIGHT_SELF | TAR_CHAR_ROOM, SYMBOL_STRESS_30, "The gold aura around you fades.", "The gold aura around $n fades", "The gold aura around you flickers slightly.", "The gold aura around $n flickers slightly.", START_15, LEARN_10, START_DO_40, LEARN_DO_5, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_PRAYERS, 0.05, COMP_GESTURAL | COMP_VERBAL, 0);
+
 // CLASS MONK
 
 // disc_monk
