@@ -4,4 +4,4 @@ The deikhan must channel the intervention through the deikhan's Weapon of
 Power, so the loss of such a weapon will prevent any smiting.  The power
 of the smite is dependent upon how devout the deikhan has been and how well
 the opponent's own deities care to protect it.  Smiting may only be done
-once per day.
+a few times per day dependant on the deikhan's level.
