@@ -1,0 +1,3 @@
+Martial Might gifts a worthy deikhan with enhanced focus and the ability
+to sometimes make additional attacks. Each additional attack requires 
+a sacrifice of a small amount of piety.
