@@ -1,3 +1,13 @@
+06-29-19 : Some Quality of life improvement for deikhans since the impression
+           was that they are boring and generally not as good as warriors.
+           - Lay Hands cooldown has been shortened and now heals more
+           - Smite cooldown scales per level and should be usable up
+             to 4 times a day at 50
+           - Synostodweomer enabled and reimagined as a small hit point buff. 
+             It has a cooldown matching it's duration so can be maintained
+             on one person. 
+           - New wrath spell Martial Might. Self-only combat buff
+
 02-16-19 : Immunity to +1/+2/+3 no longer have any effect in the game. 
            Immunity to non-magic is still circumvented by magic weapons. Also,
            the enhance weapon spell no longer makes weapons glow. 
